website/public/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://rsms.me/inter/inter.css');

@layer base {
  body.dark {
    --brand: theme('colors.cyan.400');
    --bg-1: #0C0C0C;
    --bg-2: #0F1011;
    --fg-1: #1b1b1e;
    --txt-1: theme('colors.coolGray.300');
    --txt-2: theme('colors.coolGray.200');

    --sc-bg: #111;
    --sc-divider-light:rgba(200, 200, 200, .12);
    --sc-divider-dark:rgba(200, 200, 200, .48);

    --stx-primary: #c0caf5;
    --stx-key: #5ed2ff; 
    --stx-bg: #111115;
    --stx-cmnt: #565f89;
    --stx-txt: #afc5ee;
    --stx-punct: #90bdf8;
    --stx-oprtr: #0be0e8;
    --stx-func: #00a8dc;
    --stx-str: #6cc454;
    --stx-num: #fb4399;
    --stx-tag: #f74c9c;
    --stx-bool: #ff8164;
    --stx-type: #23b1d2;
    --stx-attr: #7f77e3;
  }

  body.light {
    --brand: theme('colors.cyan.600');
    --bg-1: theme('colors.gray.50');
    --bg-2: theme('colors.white');
    --fg-1: theme('colors.warmGray.100');
    --txt-1: theme('colors.gray.600');
    --txt-2: theme('colors.trueGray.700');

    --sc-bg: #f1f1f1;
    --sc-divider-light:rgba(140, 140, 140, .42);
    --sc-divider-dark:rgba(140, 140, 140, 1);;

    --stx-primary: #a44065;
    --stx-key: #266888;
    --stx-bg: var(--fg-1);
    --stx-cmnt: #70869c;
    --stx-txt: #394252;
    --stx-punct: #14627b;
    --stx-oprtr: #02777b;
    --stx-func: #14627b;
    --stx-str: #176a1e;
    --stx-num: #a44065;
    --stx-tag: #802b2b;
    --stx-bool: #1b7591;
    --stx-type: #0c6997;
    --stx-attr: #133d73;
  }
  
  html,
  body,
  #__next {
    @apply w-full h-full p-0 m-0 overflow-auto text-gray-600 bg-bg-1 dark:text-coolGray-300;
  }

  html {
    scroll-behavior: smooth;
    text-rendering: optimizeLegibility;
    font-family: 'Inter', sans-serif; 
    --sc-width: 6px;
    --sidebar-width: 14rem;
    --header-height: 3.5rem;
  }


  * {
    scrollbar-color: var(--sc-divider-light) var(--sc-bg);
    font-variant-numeric: tabular-nums;
  }

  ::-webkit-scrollbar {
    width: var(--sc-width);
  }
  ::-webkit-scrollbar:horizontal {
    height: var(--sc-width);
  }
  ::-webkit-scrollbar-track {
    background: var(--sc-bg);
    border-radius: 10px;
  }
  ::-webkit-scrollbar-thumb {
    background: var(--sc-divider-light);
    border-radius: 10px;
  }
  ::-webkit-scrollbar-thumb:hover {
    background: var(--sc-divider-dark);
  }

  @supports (font-variation-settings: normal) {
    html { font-family: 'Inter var', sans-serif; }
  }
  
  *::selection {
    @apply text-brand bg-cyan-600/20;
  }

  .link {
    @apply text-pink-600 no-underline hover:underline;
  }

  :is(h1, h2, h3, h4, h5, h6) {
    @apply mb-5 text-trueGray-700 dark:text-coolGray-200;
  }

  ::-moz-color-swatch{
    border-color: transparent;
  }

  button{
    @apply px-2 py-1 rounded bg-brand text-bg-2 hover:opacity-70;
  }
  button:disabled{
    @apply pointer-events-none bg-brand opacity-70;
  }
  a{
    @apply text-brand hover:underline;
  }

  input{
    @apply block p-2 mt-1 transition-all duration-150 border rounded-sm outline-none border-sky-200/40 dark:border-cyan-900/20 bg-fg-1;
  } 

  input:hover, input:focus{
    box-shadow: 0 0 0 4px rgba(8, 145, 178, 0.1);
    @apply bg-gray-50 dark:bg-[#0F1011];
  }
  input:focus{
    outline: 1px solid rgba(8, 145, 178, 0.3);
    outline-offset: -1px;
  }

  :is(input[type="radio"], 
  input[type="checkbox"]):focus {
    outline: none;
  }

  .polka{
    background-image: radial-gradient(#d9d9d9 1px,transparent 0);
    background-position: 50%;
    background-size: 20px 20px;
  }

  body.dark .polka{
    background-image: radial-gradient(#202020 1px,transparent 0);
  }
  .playground{
    --width: calc(100vw - var(--sidebar-width));
    --content-width: min(47rem, var(--width));
    --margin-left: calc( calc(calc(var(--content-width) - var(--width)) / 2) - 2rem);
  }

  .pill{
    @apply px-2 py-1 rounded-lg w-max;
  }
  .active{
    @apply text-brand bg-cyan-600/20 dark:bg-cyan-400/20;
  }
  .info{
    @apply text-sky-600 bg-sky-600/20;
  }
  .danger{
    @apply text-red-600 bg-red-600/20;
  }
  .warning{
    @apply text-yellow-600 bg-yellow-600/20;
  }
  .success{
    @apply text-green-600 bg-green-600/20;
  }
  
  h1{
    @apply text-3xl font-extrabold;
  }

  h2 {
    @apply text-2xl font-bold;
  }

  h3 {
    @apply text-xl font-semibold;
  }

  h4 {
    @apply text-lg font-semibold;
  }

  :not(pre) > code {
    background: var(--stx-bg);

    font-family: 'Fira Code', monospace;
    @apply rounded-sm mx-1 py-[2px] px-2 text-sm transition-colors duration-300;
  }

  ol{
    counter-reset: count;
  }

  li {
    @apply relative pl-6 my-3;
  }
  
  ol li::before {
    counter-increment: count;
    content: counter(count);
    @apply absolute font-mono text-sm left-1 text-coolGray-400 dark:text-coolGray-500 top-[2.8px];
  }

  ul li::before {
    content: '';
    @apply absolute bg-coolGray-400 dark:bg-coolGray-500  rounded-full w-1.5 h-1.5 left-1 top-2.5;
  }
}

